@@ -29,16 +29,20 @@ argon2 = { version = "0.5.2", default-features = false }
 blake2 = { version = "0.10.6", default-features = false }
 chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom"] }
 rand = { version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"] }
+serde = { version = "1.0.190", default-features = false, features = ["derive"], optional = true }
 
 [dev-dependencies]
 anyhow.workspace = true
 clap.workspace = true
 dialoguer.workspace = true
+serde_json = "1.0.108"
+serde_test = "1.0.176"
 
 [features]
 default = ["std"]
 alloc = ["argon2/alloc"]
 std = ["alloc", "argon2/std", "blake2/std", "chacha20poly1305/std"]
+serde = ["dep:serde"]
 
 [package.metadata.docs.rs]
 all-features = true
