@@ -37,3 +37,36 @@ fn p_cost() {
     let params = Params::new(TEST_DATA_ENC).unwrap();
     assert_eq!(params.p_cost(), 4);
 }
+
+#[cfg(feature = "serde")]
+#[test]
+fn serialize() {
+    use serde_test::{assert_ser_tokens, Token};
+
+    assert_ser_tokens(
+        &Params::new(TEST_DATA_ENC).unwrap(),
+        &[
+            Token::Struct {
+                name: "Params",
+                len: 3,
+            },
+            Token::Str("m_cost"),
+            Token::U32(32),
+            Token::Str("t_cost"),
+            Token::U32(3),
+            Token::Str("p_cost"),
+            Token::U32(4),
+            Token::StructEnd,
+        ],
+    );
+}
+
+#[cfg(feature = "serde")]
+#[test]
+fn serialize_json() {
+    let params = Params::new(TEST_DATA_ENC).unwrap();
+    assert_eq!(
+        serde_json::to_string(&params).unwrap(),
+        r#"{"m_cost":32,"t_cost":3,"p_cost":4}"#
+    );
+}
